tests/src/frontend/typechecking/invalid/invalid_tparam_match_8.sk
base class L
base class R
class C() extends L, R
base class P<+T>
class Cont<+T: R>(T) extends P<T>

fun test<V>(x: P<V>): void {
  x match {
  | Cont(L _) -> void
  | _ -> void
  }
}
